--- a/i18n/locales/cs.json
+++ b/i18n/locales/cs.json
@@ -1,6 +1,6 @@
 {
   "site": {
-    "title": "Rita",
+    "title": "Wattani Aquaculture Association",
     "language": "Čeština"
   },
   "common": {
